fixes #7583 create a class to make high contrast focus on border container splitters visible in FF
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22359 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -888,6 +888,10 @@ body .dijitAlignClient { position: absolute; }
 	overflow: hidden;
 	display: block;
 }
+.dj_ff3 .dijit_a11y div.dijitSplitter:focus {
+	outline-style:dotted;
+	outline-width: 2px;
+}
 
 .dijitSplitPane {
 	position: absolute;
